Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2904377 by drunken monkey, borisson_: Added Autocomplete tests for the DB
  backend.
- #2907943 by drunken monkey: Fixed warnings on PHP 5.
- #2906099 by drunken monkey: Fixed use of field's underlying property label in
  Views.
- #2896073 by drunken monkey, New Zeal: Fixed warnings when indexing empty text
  fields.
- #2898082 by drunken monkey: Re-organized our test class namespaces.
- #2907334 by drunken monkey: Fixed some more Drupal coding standards
  violations.
- #2903407 by drunken monkey, alan-ps: Added #optional to form containers where
  appropriate.

Search API 1.4 (2017-09-07):
----------------------------
- #2905117 by drunken monkey: Fixed problems with multi-valued
  processor-generated fields on Solr.
- #2884034 by drunken monkey: Fixed highlighting for processed keywords.
- #2902947 by drunken monkey: Fixed "Thousands marker" setting for Views fields.
- #2902907 by drunken monkey, juagarc4: Fixed indexing of multibyte text on
  MySQL.
- #2903805 by drunken monkey: Disabled fields processors for hidden fields.
- #2903014 by drunken monkey: Fixed "Enable for all fields" processor option.
- #2904976 by drunken monkey: Fixed the current test fails.
- #2902810 by drunken monkey, borisson_: Made query serialization in tests
  safer.
- #2903834 by drunken monkey: Adapted to latest changes in Autocomplete module.
- #2903633 by drunken monkey: Fixed current test fails.
- #2899920 by kfritsche: Fixed stored value of boolean Views filters.
- #2896312 by kerasai, drunken monkey: Fixed problems with Views options list
  filter.
- #2896878 by drunken monkey: Fixed test fails due to latest Core changes.
- #2665476 by ericgsmith, drunken monkey: Fixed paging in cached views.

Search API 1.3 (2017-07-19):
----------------------------
- #2888584 by drunken monkey: Fixed index description for "cron batch size" of
  -1.
- #2895142 by drunken monkey: Made our test classes more useful for other